Correção do Favicon.ico, retirada de console.log na index.html

--- a/Ilevus/Views/index.html
+++ b/Ilevus/Views/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Ilevus</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon shortcut" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon shortcut" type="image/x-icon" href="/favicon.ico" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/react-select/dist/react-select.css">
 
@@ -51,7 +51,6 @@
 
     <script type="text/javascript">
         function monitorSessao() {
-            console.log('passou aqui');
             window.onbeforeunload = function (event) {
                 var message = 'Important: Please click on \'Save\' button to leave this page.';
                 if (typeof event == 'undefined') {
