Refatoração para Atomic Design

--- a/Ilevus/Views/public/index.html
+++ b/Ilevus/Views/public/index.html
@@ -47,7 +47,7 @@
 <body>
     <div id="main-global-popover" class="ilevus-popover"></div>
     <div id="main-global-modal" class="modal fade" tabindex="-1" role="dialog"></div>
-    <main id="app"></main>
+    <div id="app"></div>
 
 
     <script type="text/javascript">
